fix form alligment/spacing

--- a/scss/form_renderer.scss
+++ b/scss/form_renderer.scss
@@ -4,3 +4,6 @@
   width: 100%;
 }
 
+#form-rendered {
+  margin-top: 10px;
+}
